tests/aster/x/ocaml/map_nested_assign.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/map_nested_assign.ml", line 6, characters 129-130:
6 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "inner" (List.assoc "outer" !data)))]));
                                                                                                                                     ^
Error: Syntax error: ']' expected
File "/workspace/mochi/tests/transpiler/x/ocaml/map_nested_assign.ml", line 6, characters 67-68:
6 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "inner" (List.assoc "outer" !data)))]));
                                                                       ^
  This '[' might be unmatched
