tests/aster/x/ocaml/map_nested_assign.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let data = ref [("outer", [("inner", 1)])] in
  data := (("outer", (("inner", 2) :: List.remove_assoc "inner" (List.assoc "outer" !data))) :: List.remove_assoc "outer" !data);
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "inner" (List.assoc "outer" !data)))]));
